--- a/index.html
+++ b/index.html
@@ -13,325 +13,57 @@
         <button class="light">Light</button>
         <button class="dark">Dark</button>
       </div>
-    </div>
-    <!-- TradingView Widget BEGIN -->
-    <div class="tradingview-widget-container" id="dark">
-      <div class="tradingview-widget-container__widget"></div>
-      <div class="tradingview-widget-copyright">
-        <a href="https://www.tradingview.com" rel="noopener" target="_blank"
-          ><span class="blue-text">Market Data</span></a
-        >
-        by TradingView
-      </div>
-      <script
-        type="text/javascript"
-        src="https://s3.tradingview.com/external-embedding/embed-widget-market-quotes.js"
-        async
-      >
-          {
-          "width": "100%",
-          "height": "600",
-          "symbolsGroups": [
-          {
-            "name": "Stocks",
-            "symbols": [
-              {
-                "name": "NASDAQ:AMZN",
-                "displayName": "AMZN - Amazon"
-              },
-              {
-                "name": "TSX:BB",
-                "displayName": "BB - Blackberry"
-              },
-              {
-                "name": "TSX:BEPC",
-                "displayName": "BEPC - Brookfield Renewable"
-              },
-              {
-                "name": "TSX:BEP.UN",
-                "displayName": "BEP.UN - Brookfield Renewable"
-              },
-              {
-                "name": "TSX:BIP.UN",
-                "displayName": "BIP.UN - Brookfield Infrastructure"
-              },
-              {
-                "name": "TSX:BMO",
-                "displayName": "BMO - Bank of Montreal"
-              },
-              {
-                "name": "NASDAQ:CLAR",
-                "displayName": "CLAR - Clarus (BD)"
-              },
-              {
-                "name": "NYSE:GME",
-                "displayName": "GME - Gamestop"
-              },
-              {
-                "name": "TSXV:GRN",
-                "displayName": "GRN.V - Greenlane Renewables"
-              },
-              {
-                "name": "TSX:GRT.UN",
-                "displayName": "GRT.UN - Granite REIT"
-              },
-              {
-                "name": "TSX:LSPD",
-                "displayName": "LSPD - Lightspeed"
-              },
-              {
-                "name": "NASDAQ:MSFT",
-                "displayName": "MSFT - Microsoft"
-              },
-              {
-                "name": "NYSE:PLTR",
-                "displayName": "PLTR - Palantir"
-              },
-              {
-                "name": "TSX:VET",
-                "displayName": "VET - Vermillion Energy"
-              }
-            ]
-          },
-          {
-            "name": "ETFs",
-            "symbols": [
-              {
-                "name": "NASDAQ:BOTZ",
-                "displayName": "BOTZ - Robots & AI"
-              },
-              {
-                "name": "AMEX:IPAY",
-                "displayName": "IPAY - Mobile/FinTech"
-              },
-              {
-                "name": "NASDAQ:QCLN",
-                "displayName": "QCLN - Clean Energy Index"
-              },
-              {
-                "name": "NASDAQ:SKYY",
-                "displayName": "SKYY - Cloud Computing"
-              },
-              {
-                "name": "TSX:TEC",
-                "displayName": "TEC - Technology Index"
-              },
-              {
-                "name": "TSX:XIT",
-                "displayName": "XIT - CAD Tech Index"
-              },
-              {
-                "name": "TSX:ZRE",
-                "displayName": "ZRE - REITs"
-              },
-              {
-                "name": "TSX:ZUT",
-                "displayName": "ZUT - Utilities"
-              },
-              {
-                "name": "TSX:ZWB",
-                "displayName": "ZWB - CC Banks"
-              },
-              {
-                "name": "TSX:ZWU",
-                "displayName": "ZWU - CC Utilities"
-              }
-            ]
-          },
-          {
-            "name": "Watch List",
-            "symbols": [
-              {
-                "name": "NASDAQ:CRSR",
-                "displayName": "CRSR - Corsair"
-              },
-              {
-                "name": "NYSE:DM",
-                "displayName": "DM - Desktop Metal"
-              },
-              {
-                "name": "NYSE:PRLB",
-                "displayName": "PRLB - PROTO Labs"
-              },
-              {
-                "name": "AMEX:PRNT",
-                "displayName": "PRNT - 3D Printing"
-              },
-              {
-                "name": "NYSE:SQ",
-                "displayName": "SQ - Square"
-              }
-            ]
-          }
-        ],
-          "showSymbolLogo": true,
-          "colorTheme": "dark",
-          "isTransparent": true,
-          "locale": "en"
-        }
-      </script>
-    </div>
-    <!-- TradingView Widget END -->
-    <!-- TradingView Widget BEGIN -->
-    <div class="tradingview-widget-container" id="light">
-      <div class="tradingview-widget-container__widget"></div>
-      <div class="tradingview-widget-copyright">
-        <a href="https://www.tradingview.com" rel="noopener" target="_blank"
-          ><span class="blue-text">Market Data</span></a
-        >
-        by TradingView
-      </div>
-      <script
-        type="text/javascript"
-        src="https://s3.tradingview.com/external-embedding/embed-widget-market-quotes.js"
-        async
-      >
-      {
-        "width": "100%",
-        "height": "600",
-        "symbolsGroups": [
+
+      <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/indices/" rel="noopener" target="_blank"><span class="blue-text">Indices</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-quotes.js" async>
+  {
+  "width": 770,
+  "height": 450,
+  "symbolsGroups": [
+    {
+      "name": "Indices",
+      "originalName": "Indices",
+      "symbols": [
         {
-          "name": "Stocks",
-          "symbols": [
-            {
-              "name": "NASDAQ:AMZN",
-              "displayName": "AMZN - Amazon"
-            },
-            {
-              "name": "TSX:BB",
-              "displayName": "BB - Blackberry"
-            },
-            {
-              "name": "TSX:BEPC",
-              "displayName": "BEPC - Brookfield Renewable"
-            },
-            {
-              "name": "TSX:BEP.UN",
-              "displayName": "BEP.UN - Brookfield Renewable"
-            },
-            {
-              "name": "TSX:BIP.UN",
-              "displayName": "BIP.UN - Brookfield Infrastructure"
-            },
-            {
-              "name": "TSX:BMO",
-              "displayName": "BMO - Bank of Montreal"
-            },
-            {
-              "name": "NASDAQ:CLAR",
-              "displayName": "CLAR - Clarus (BD)"
-            },
-            {
-              "name": "NYSE:GME",
-              "displayName": "GME - Gamestop"
-            },
-            {
-              "name": "TSXV:GRN",
-              "displayName": "GRN.V - Greenlane Renewables"
-            },
-            {
-              "name": "TSX:GRT.UN",
-              "displayName": "GRT.UN - Granite REIT"
-            },
-            {
-              "name": "TSX:LSPD",
-              "displayName": "LSPD - Lightspeed"
-            },
-            {
-              "name": "NASDAQ:MSFT",
-              "displayName": "MSFT - Microsoft"
-            },
-            {
-              "name": "NYSE:PLTR",
-              "displayName": "PLTR - Palantir"
-            },
-            {
-              "name": "TSX:VET",
-              "displayName": "VET - Vermillion Energy"
-            }
-          ]
+          "name": "NSE:NIFTY",
+          "displayName": "NIFTY50"
         },
         {
-          "name": "ETFs",
-          "symbols": [
-            {
-              "name": "NASDAQ:BOTZ",
-              "displayName": "BOTZ - Robots & AI"
-            },
-            {
-              "name": "AMEX:IPAY",
-              "displayName": "IPAY - Mobile/FinTech"
-            },
-            {
-              "name": "NASDAQ:QCLN",
-              "displayName": "QCLN - Clean Energy Index"
-            },
-            {
-              "name": "NASDAQ:SKYY",
-              "displayName": "SKYY - Cloud Computing"
-            },
-            {
-              "name": "TSX:TEC",
-              "displayName": "TEC - Technology Index"
-            },
-            {
-              "name": "TSX:XIT",
-              "displayName": "XIT - CAD Tech Index"
-            },
-            {
-              "name": "TSX:ZRE",
-              "displayName": "ZRE - REITs"
-            },
-            {
-              "name": "TSX:ZUT",
-              "displayName": "ZUT - Utilities"
-            },
-            {
-              "name": "TSX:ZWB",
-              "displayName": "ZWB - CC Banks"
-            },
-            {
-              "name": "TSX:ZWU",
-              "displayName": "ZWU - CC Utilities"
-            }
-          ]
+          "name": "BSE:SENSEX",
+          "displayName": "SENSEX"
         },
         {
-          "name": "Watch List",
-          "symbols": [
-            {
-              "name": "NASDAQ:CRSR",
-              "displayName": "CRSR - Corsair"
-            },
-            {
-              "name": "NYSE:DM",
-              "displayName": "DM - Desktop Metal"
-            },
-            {
-              "name": "NYSE:PRLB",
-              "displayName": "PRLB - PROTO Labs"
-            },
-            {
-              "name": "AMEX:PRNT",
-              "displayName": "PRNT - 3D Printing"
-            },
-            {
-              "name": "NYSE:SQ",
-              "displayName": "SQ - Square"
-            }
-          ]
+          "name": "NSE:BANKNIFTY",
+          "displayName": "NIFTY BANK"
+        },
+        {
+          "name": "NSE:INDIAVIX",
+          "displayName": "VIX INDIA"
+        },
+        {
+          "name": "SP:SPX",
+          "displayName": "S&P 500"
+        },
+        {
+          "name": "NASDAQ:NDX",
+          "displayName": "NASDAQ"
         }
-      ],
-        "showSymbolLogo": true,
-        "colorTheme": "light",
-        "isTransparent": true,
-        "locale": "en"
-      }
-      </script>
-    </div>
-    <!-- TradingView Widget END -->
-    <!-- Custom JS for widget styling BEGIN -->
-    <script src="app.js"></script>
+      ]
+    }
+  ],
+  "showSymbolLogo": true,
+  "colorTheme": "dark",
+  "isTransparent": true,
+  "locale": "en"
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
+
+<script src="app.js"></script>
     <!-- Custom JS END -->
   </body>
 </html>
